--- a/app/index.html
+++ b/app/index.html
@@ -429,8 +429,8 @@
               <div class="copy2">
 
                 <p class="slide2">As part of a self-directed initiative, I undertook a project aimed at refining my AI
-                  and design proficiencies. The content is created by GPT3.5 and Dall-e 2. Administrators can directly
-                  edit the content and direct the AI in making revisions.</p>
+                  and design proficiencies. The text and image content is created by GPT3.5 and Dall-e 2. Administrators
+                  can directly edit the content and direct the AI in making revisions.</p>
 
               </div>
 
@@ -527,17 +527,17 @@
 
               <h4><em>Video One-armed Bandite</em></h4>
 
-              <p>Slotmachine is a full-featured one-arm bandit developed to show off and explore the differences between
-                Vue 2 and Vue 3. The slot machine incorporates symbols inspired by iconic figures like Prince, David
-                Bowie, Lady Gaga, birds, and selected food items, making it a visually engaging application.</p>
+              <p>Slotmachine is a one-arm bandit game developed to show off and explore the differences between Vue 2
+                and Vue 3. The slot machine incorporates symbols inspired by iconic figures like Prince, David Bowie,
+                Lady Gaga, and is festooned with birds and food. What else could you want?</p>
 
               <h4>Key Features</h4>
 
               <ul>
-                <li class="list-item checked">Symbol Diversity: Offers a wide range of symbols including Prince, David
-                  Bowie, Lady Gaga, birds, and Oreo cookies.</li>
-                <li class="list-item checked">Credit System: Implements a credit system allowing users to spin the slot
-                  machine with a starting credit balance that is partially replenished each day.</li>
+                <li class="list-item checked">Theatrical symbols including Prince, David Bowie, Lady Gaga, birds, and
+                  Oreo cookies.</li>
+                <li class="list-item checked">Implements a credit system allowing users to spin the slot machine with a
+                  starting credit balance that is partially replenished each day.</li>
                 <li class="list-item checked">Reel physics enhance the slot machine experience.</li>
                 <li class="list-item checked">Incorporates sound effects and jingles I created in Logic Pro.</li>
               </ul>
@@ -546,20 +546,12 @@
 
               <ul class="detailed">
                 <li class="list-item checked">Vue.js</li>
-                <li class="list-item checked">Vuex: State management library for Vue.js applications.</li>
-                <li class="list-item checked">Core-js: JavaScript standard library, providing essential polyfills.</li>
-                <li class="list-item checked">Vue CLI: Command-line interface for Vue.js development tasks.</li>
-                <li class="list-item checked">Babel: JavaScript compiler for transforming code.</li>
-                <li class="list-item checked">ESLint: Linting utility for identifying and fixing code errors.</li>
-                <li class="list-item checked">Google Fonts: Integration of "Overpass Mono" font for enhanced typography.
-                </li>
+                <li class="list-item checked">Vuex</li>
+                <li class="list-item checked">Vue CLI</li>
+                <li class="list-item checked">Babel</li>
+                <li class="list-item checked">ESLint</li>
                 <li class="list-item checked">Audio Files: Various audio files for sound effects during gameplay.</li>
               </ul>
-
-              <p>This project serves as a creative exploration of Vue.js capabilities, showcasing the development of an
-                interactive and visually appealing slot machine application with distinctive symbols and engaging
-                features. The use of Vue 3 and associated tools highlights the evolution of Vue.js in building modern
-                web applications.</p>
 
             </div>
 
@@ -575,10 +567,8 @@
               <a class="github"
                  href="https://github.com/erikmattheis/MoveDocumentsToS3">Github</a>
 
-              <p>The project, named "," is a custom tool designed to facilitate the backup of MongoDB databases to
-                Amazon S3 when transferring a project from shared hosting to AWS Cloud. It addresses the specific
-                requirements of the migration process. There wasn't a tool that did exactly what I wanted so I invented
-                it.</p>
+              <p>This tool addresses a specific need I encountered while migrating a MongoDB database to AWS Cloud. I
+                couldnt find anything to do exactly what I wanted so I made my own.</p>
 
             </div>
 
@@ -589,38 +579,17 @@
                 integrity during migration.</li>
               <li class="list-item checked">Amazon S3 Integration: Utilizes Amazon S3 for secure and scalable storage of
                 MongoDB backup files.</li>
-              <li class="list-item checked">Synchronization: Ensures synchronization between MongoDB and S3,
-                guaranteeing that the latest data is backed up.</li>
-              <li class="list-item checked">Automated Removal: Provides functionality to remove specified MongoDB
-                collections after successful backup.</li>
-              <li class="list-item checked">Query Configuration: Allows customization of MongoDB queries for data
-                selection based on specific criteria.</li>
-              <li class="list-item checked">Logging: Implements a logging mechanism to record backup and removal
-                activities. </li>
-              <li class="list-item checked">Graceful Exit: Ensures a graceful exit from the process after completing
-                backup and collection removal.</li>
             </ul>
 
             <h4>Technologies and Tools</h4>
 
             <ul>
-              <li class="list-item checked">Node.js: Platform used for server-side JavaScript execution.</li>
-              <li class="list-item checked">Express: Web application framework for Node.js, used for building the
-                server.</li>
-              <li class="list-item checked">MongoDB: Database for storing and retrieving data.</li>
-              <li class="list-item checked">Amazon S3: Cloud storage service for scalable and durable backup storage.
-              </li>
-              <li class="list-item checked">node-mongodb-s3-backup: External library for MongoDB to S3 backup
-                functionality. </li>
-              <li class="list-item checked">MongoClient: MongoDB driver for Node.js to interact with MongoDB.</li>
-              <li class="list-item checked">config.json: Configuration file for specifying MongoDB and S3 settings.</li>
-              <li class="list-item checked">Logger (logger.js): Logging module for recording backup and removal
-                activities. </li>
+              <li class="list-item checked">Node.js</li>
+              <li class="list-item checked">Express</li>
+              <li class="list-item checked">MongoDB</li>
+              <li class="list-item checked">AWS</li>
+              <li class="list-item checked">Amazon S3</li>
             </ul>
-
-            <p>This project showcases the ability to create a tailored solution for a specific migration scenario,
-              integrating MongoDB, Amazon S3, and Node.js for an efficient backup process. The custom tool enhances the
-              data management aspect of transitioning from shared hosting to AWS Cloud.</p>
 
           </div>
 
@@ -634,7 +603,7 @@
               <a class="github"
                  href="https://github.com/erikmattheis/OpeningRangeBot/">Github</a>"
 
-              <p class="description"> The project is an options trading bot named "OpeningRangeBot," developed for
+              <p class="description">The project is an options trading bot named "OpeningRangeBot," developed for
                 learning purposes using Node.js. It facilitates automated options trading based on specified strategies.
                 The OpeningRangeBot project is an automated trading bot designed to execute options trading strategies
                 based on market conditions. It utilizes real-time data streaming from TradeKing and simulation data from
