--- a/app/index.html
+++ b/app/index.html
@@ -336,14 +336,12 @@
 
             <div class="portfolio-card">
 
-              <div class=" section screenshot-wrapper">
-                <a href="https://articl.net/">
-                  <img class="screenshot"
-                       src="https://storage.googleapis.com/mattheis-images/images/screenshots/articl.net.jpg"
-                       alt="Articl.net" />
+              <div class="section screenshot-wrapper">
+                <img class="screenshot"
+                     src="https://storage.googleapis.com/mattheis-images/images/screenshots/articl.net.jpg"
+                     alt="Articl.net" />
 
-                  <h3 class="title">Articl.net</h3>
-                </a>
+                <h3 class="title">Articl.net</h3>
 
                 <h4 class="subtitle">Website</h4>
                 <a class="github"
@@ -395,18 +393,16 @@
 
               <div class="portfolio-card">
 
-                <div class="svg-wrapper">
-                  <a href="https://naturallyhued.com/">
-                    <img class="screenshot"
-                         src="https://storage.googleapis.com/mattheis-images/images/screenshots/naturally-hued.jpg"
-                         alt="Naturally Hued" />
+                <div class="screenshot-wrapper">
+                  <img class="screenshot"
+                       src="https://storage.googleapis.com/mattheis-images/images/screenshots/naturally-hued.jpg"
+                       alt="Naturally Hued" />
 
-                    <h3 class="title">Naturally Hued</h3>
+                  <h3 class="title">Naturally Hued</h3>
 
-                    <h4 class="subtitle">Website</h4>
-                    <a class="github"
-                       href="https://github.com/erikmattheis/NaturallyHued.com">Github</a>
-                  </a>
+                  <h4 class="subtitle">Website</h4>
+                  <a class="github"
+                     href="https://github.com/erikmattheis/NaturallyHued.com">Github</a>
 
                 </div>
 
